:recycle: 쿼리빌더에 실제 값을 넣어주도록 수정